aashish have done chnage

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     return time * 3600; // 1 hour = 3600 seconds
                 default:
                     return time; // Assume seconds if no conversion is needed
+                    //some chnage are done
             }
         }
 
